refactor: Update site.css

--- a/css/site.css
+++ b/css/site.css
@@ -16,6 +16,6 @@
   font-family: Andale Mono, monospace;
   text-align: center;
   font-size: 150%;
-  color: rgb(180, 180, 180);
-  text-shadow: 1px 1px 3px black;
+  color: white;
+  text-shadow: 2px 2px 4px black;
 }
