--- a/css/site.css
+++ b/css/site.css
@@ -12,6 +12,12 @@
   width: 50%;
 }
 
+.landing-video {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+
 .landing-text {
   font-family: Andale Mono, monospace;
   text-align: center;
